5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1585_2895.log
== TEST (2019-03-21 11:40:30) 
-- CODE:
var1=input("quantidade de jogos?")
var2=input("valor unitário de cada jogo?")
var3=input("valor do frete?")

total= var1+var2+var3

print(total)
-- OUTPUT:
1245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:42) 
-- CODE:
var1=input("quantidade de jogos?")
var2=input("valor unitário de cada jogo?")
var3=input("valor do frete?")

total= var1+var2+var3

print(total)
-- OUTPUT:
1245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:58) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=float(input("valor unitário de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1+var2+var3

print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:06) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=float(input("valor unitário de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1+var2+var3

print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:12) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1+var2+var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:44:18) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1+var2+var3

print(total)
-- EXECUTION TIME:
0.136816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:25) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1+var2+var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:50) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1*var2+var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:08) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1*var2+var3

print(total)
-- EXECUTION TIME:
0.154189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:40) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete,sendo que cada site é diferente?"))

total= var1*var2+var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:03) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= var1*var2+var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:59) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1*var2)+var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:11) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1*var2)+var3

print(total)
-- EXECUTION TIME:
0.186218
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:44) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2)+var3

print(total)
-- EXECUTION TIME:
0.188887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:45) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2)+var3

print(total)
-- EXECUTION TIME:
0.156936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:45) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2)+var3

print(total)
-- EXECUTION TIME:
0.154857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:46) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2)+var3

print(total)
-- EXECUTION TIME:
0.196311
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1585/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:51) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2) + var3

print(total)
-- EXECUTION TIME:
0.141537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:52) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2) + var3

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:52) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2) + var3

print(total)
-- EXECUTION TIME:
0.145357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:53) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2) + var3

print(total)
-- EXECUTION TIME:
0.188716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:53) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2) + var3

print(total)
-- EXECUTION TIME:
0.187769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '67.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:50:07) 
-- CODE:
var1=float(input("quantidade de jogos?"))
var2=int(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= ((var1 * var2) + var3)

print(total)
-- EXECUTION TIME:
0.161677
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2=int(input("valor unitario de cada jogo?"))
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:50:36) 
-- CODE:
var1=int(input("quantidade de jogos?"))
var2=float(input("valor unitario de cada jogo?"))
var3=float(input("valor do frete?"))

total= (var1 * var2) + var3

print(total)
-- EXECUTION TIME:
0.134249
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:53:33) 
-- CODE:
print(input("quantidade de jogos a serem comprdos:"))
print(input("valor unitario de cada jogo: "))
print(input("valor do frete: "))

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:55:04) 
-- CODE:
var = print(input("quantidade de jogos a serem comprados:"))
var2 = print(input("valor unitario de cada jogo: "))
var3 = print(input("valor do frete: "))
total = (var*var2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (var*var2)
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:55:48) 
-- CODE:
var = print(input("quantidade de jogos a serem comprados:"))
var2 = print(input("valor unitario de cada jogo: "))
var3 = print(input("valor do frete: "))
total = ((var*var2) + var3)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = ((var*var2) + var3)
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:55:57) 
-- CODE:
var = print(input("quantidade de jogos a serem comprados:"))
var2 = print(input("valor unitario de cada jogo: "))
var3 = print(input("valor do frete: "))
total = ((var*var2) + var3)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = ((var*var2) + var3)
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:57:29) 
-- CODE:
var = float(print(input("quantidade de jogos a serem comprados:")))
var2 = float(print(input("valor unitario de cada jogo: ")))
var3 = float(print(input("valor do frete: ")))
total =((var*var2) + var3)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = float(print(input()))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:57:59) 
-- CODE:
var = float(print(input("quantidade de jogos a serem comprados:")))
var2 = float(print(input("valor unitario de cada jogo: ")))
var3 = float(print(input("valor do frete: ")))
total =((var*var2) + var3)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = float(print(input()))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 10:01:15) 
-- CODE:
var = float(input("quantidade de jogos a serem comprados:"))
var2 = float(input("valor unitario de cada jogo: "))
var3 = float(input("valor do frete: "))
total =((var*var2) + var3)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 10:01:29) 
-- CODE:
var = float(input("quantidade de jogos a serem comprados:"))
var2 = float(input("valor unitario de cada jogo: "))
var3 = float(input("valor do frete: "))
total =((var*var2) + var3)
print(total)
-- EXECUTION TIME:
0.180576
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
